# PrivacyRPC

./: .gitignore  LICENSE  README.md  SCAM_REPORTS.md
desktop-app/: .gitignore  Dockerfile.linux
desktop-app/src/: index.html
desktop-app/src-tauri/: Cargo.toml  LICENSE.rtf  create-installer-images.js  installer-hooks.nsh  package-lock.json  package.json  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/nsis/: installer.nsi
desktop-app/src-tauri/src/: main.rs  native_host.rs  native_messaging.rs  proxy.rs  tor.rs  transaction_decoder.rs  websocket.rs
extension/: .gitignore  background.js  manifest.json  popup.html  popup.js  sidepanel.html
extension/content/: contentScript.js  injected.js  overlayStyles.css
extension/icons/: create-icons.js  generate-icons.html  resize-logo.js
sdk/: README.md
sdk/demo/: package-lock.json  package.json  server.js
sdk/demo/public/: index.html
sdk/kotlin/: build.gradle.kts
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/shared/: blocklist.json
sdk/swift/: Package.swift
sdk/typescript/: package-lock.json  package.json  test-tor.js  tsconfig.json
sdk/typescript/examples/: basic.ts
sdk/typescript/scripts/: download-tor.js
sdk/typescript/src/: forward-proxy.ts  index.ts  mitm.ts  phishing.ts  tor.ts  (+1 more)
test-site/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.js  test-dapp.html  transaction-decoder-demo.html
test-site/analysis/: Dockerfile  analyze.sh  docker-compose.yml
test-site/drainer-patterns/: authority-change.html  fake-claim-tx.html  immediate-check.html  multi-transfer.html  quick-transaction.html  rapid-enumeration.html
test-site/phishing/: bookmark-drainer.html  fake-claim.html  seed-phrase-form.html  urgency-language.html
test-site/suspicious/: social-referrer.html  wallet-probe.html
(+24 files in other folders)
