[package]
name = "privacyrpc"
version = "1.0.0"
description = "PrivacyRPC - Privacy-first Solana RPC Proxy"
authors = ["PrivacyRPC"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bs58 = "0.5"
directories = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
