[package]
name = "privacyrpc-sdk"
version = "1.0.0"
edition = "2021"
authors = ["PrivacyRPC Team"]
description = "Secure RPC proxy and blockchain protection SDK"
license = "MIT"
repository = "https://github.com/privacyrpc/sdk"
keywords = ["solana", "ethereum", "blockchain", "rpc", "security"]
categories = ["cryptography", "network-programming", "web-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
full = ["certificate-pinning", "traffic-monitor"]
certificate-pinning = []
traffic-monitor = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_helius"
path = "examples/with_helius.rs"
